# web-scraping

./: LICENSE  analytics.py  dataset.csv  pyproject.toml  readme.md  web_scraping.py
.ipynb_checkpoints/: 01-WebScraping-checkpoint.ipynb
